* *BREAKING* *CHANGE*: CSS: Changed +live_tree_item_icon+ class name to +live_tree_item_branching_icon+.
* *BREAKING* *CHANGE*: CSS: Changed +live_tree_branch_expand_collapse_link+ class name to +live_tree_branching_link+.
* Support for reloading the children of a branch using <tt>reloadChildrenOfItem()</tt> method.
* Support for items with icons through +icon+ property of item.
* Support for persistent state using <tt>getState()</tt> method and +initialState+ option.
* Support for capturing right-clicks on an item using the +onContextMenu+ event.
* Original JavaScript +event+ objects get passed to LiveTree event handlers.
* Added <tt>getActiveItem()</tt> method.
* Added <tt>isItemChildOf()</tt> method.
* Added +notLoadedIconHtml+ and +notLoadedItemHtml+ options.

Rails Server:

* Support for items with icons through the <tt>:render_item_icon</tt> option.
* Support client's new +onContextMenu+ option through <tt>:on_context_menu</tt> option.
* Added the following parameters for LiveTree::ClassMethods.live_tree:
  * <tt>:find_item_method</tt>
  * <tt>:item_id_attribute</tt>
  * <tt>:item_name_attribute</tt>
  * <tt>:render_item_name</tt>
  * <tt>:render_item_icon</tt>
  * <tt>:item_children_attribute</tt>
  * <tt>:item_parent_attribute</tt>

Demos:

* Added file system browser demo.
* Added persistant state demo.
* Added links to relevant source files in all demos.

=== 0.1.2 - January 29, 2006

Client:

* Better error handling.
* Rework of display system.
* When loading a folder, "Loading..." is displayed where the children 
  will go.
* Support IDs with special characters.
* Support for Windows-like expand/collapse icons
   
Rails Server:

* Support non-numeric IDs.
* Ability to easily serve data from non-ActiveRecord models.
    
Demos:

* Added demos for nested set, alternate field names, non-model data, and custom data 
  action.
  
Documentation:

* Added documentation for working with +acts_as_nested_set+ models, non-ActiveRecord