@@ -4527,7 +4527,7 @@ function setStylesheet(s,id)
 	<div id="contentStash"></div>
 	<div id="storeArea"><div tiddler="SiteSubtitle" modifier="Manny" modified="200601160930" created="200601160930" tags=""></div>
 <div tiddler="SiteTitle" modifier="Manny" modified="200601160930" created="200601160930" tags="">LiveTree Notes</div>
-<div tiddler="Todo For This Release" modifier="Manny" modified="200602260846" created="200602252139" tags="">* find out what _stopLoading behaviour is on &quot;not loaded&quot; branches\n* persistence?\n</div>
+<div tiddler="Todo For This Release" modifier="Manny" modified="200603011154" created="200602252139" tags="">* find out what _stopLoading behaviour is on &quot;not loaded&quot; branches\n* figure what the right way to do portable mouse events is\n</div>
 		</div>
 	</body>
 </html>
