@@ -58,10 +58,6 @@
 
 <div style="position:absolute;top:570px;left:0px">
     <p>
-        <%= link_to_function("Reload tree", "fstree.reloadChildrenOfItem('/')") %>
-        <%= link_to_function("Reload /app folder", "fstree.reloadChildrenOfItem('/app')") %>
-    </p>
-    <p>
         View source code: 
         model (<%= link_to_function "file_system_item", "jumpTo(fstree, '/app/models/file_system_item.rb')" %>)
         |
